@@ -38,3 +38,9 @@ let id = let module M = struct end in fun x -> x;;
 (* PR#4511 *)
 
 let ko = let module M = struct end in fun _ -> ();;
+
+(* PR#5993 *)
+
+module M : sig type -'a t = private int end =
+  struct type +'a t = private int end
+;;
